[package]
name = "jsonrpc"
version = "0.11.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"
license = "CC0-1.0"
homepage = "https://github.com/apoelstra/rust-jsonrpc/"
repository = "https://github.com/apoelstra/rust-jsonrpc/"
documentation = "https://docs.rs/jsonrpc/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc" ]
readme	 = "README.md"

[lib]
name = "jsonrpc"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha.4"
futures-util-preview = "=0.3.0-alpha.19"
