[package]
name = "async-jsonrpc"
version = "0.1.0-alpha.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
license = "CC0-1.0"
homepage = "https://github.com/hlb8122/async-jsonrpc-rs/"
repository = "https://github.com/hlb8122/async-jsonrpc-rs/"
documentation = "https://docs.rs/async-jsonrpc/"
description = "Rust support for the JSON-RPC 2.0 protocol"
keywords = [ "protocol", "json", "http", "jsonrpc" ]
readme	 = "README.md"

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
hyper = { version = "0.13.0-alpha.4", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha.4"
futures-util-preview = "=0.3.0-alpha.19"
